Pull up following revision(s) (requested by kre in ticket #1397): 	bin/sh/parser.c: revision 1.114 via patch PR bin/51027 - fix the parsing of references to shell parameters when given without braces (ie: $2 etc).  Only the first 9 shell parameters ($1 .. $9) and the special parameter ($0) can be referenced this way, $10 is ${1}0 not ${10}.   Make it so. This bug brought to notice by Sven Mascheck's web pages which discuss (among other things) the history of this (and other ash based) shells .. see http://www.in-ulm.de/~mascheck/ (from kre@)